--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"paste/pre": "dev-master"
+		"paste/pre": "dev-master",
+		"facebook/php-sdk-v4" : "4.0.*",
+		"hybridauth/hybridauth": "*"
 	},
 	"autoload": {
 		"classmap": [
